--- a/MvcApplication2/Views/Movies/Index.cshtml
+++ b/MvcApplication2/Views/Movies/Index.cshtml
@@ -8,6 +8,17 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
+    
+    
+   
+    
+    Genre: @Html.DropDownList("movieGenre", "All")
+    Title: @Html.TextBox("SearchString") <br />
+        <input type="submit" value="Filter" />
+
+    
+   
+    
 </p>
 <table>
     <tr>
